Classes to files

--- a/checkers.html
+++ b/checkers.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 
     <script src="main-code.js"></script>
+    <script src="Pieces.js"></script>
+    <script src="BoardData.js"></script>
 </head>
 
 <body>
