--- a/checkers.html
+++ b/checkers.html
@@ -12,6 +12,8 @@
     <script src="main-code.js"></script>
     <script src="Pieces.js"></script>
     <script src="BoardData.js"></script>
+    <script src="Game.js"></script>
+
 </head>
 
 <body>
